add api calls for group
